--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "authman",
+  "name": "auth",
   "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
+    "copy-files": "copyfiles -u 1 src/**/*.hbs dist/",
+    "build": "nest build && npm run copy-files",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start": "npm run build && nest start",
+    "start:dev": "npm run build && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -24,51 +24,47 @@
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/mongoose": "^9.2.0",
+    "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/cache-manager": "^4.0.1",
-    "@types/crypto-js": "^4.1.1",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/nodemailer": "^6.4.5",
-    "bcrypt": "^5.0.1",
-    "cache-manager": "^4.1.0",
+    "bcrypt": "^5.1.0",
+    "cache-manager": "^3.6.3",
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.0",
     "crypto-js": "^4.1.1",
-    "handlebars": "^4.7.7",
+    "dotenv": "^16.0.3",
+    "ioredis": "^5.3.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.0",
-    "nodemailer": "^6.7.8",
-    "redis": "^3.1.2",
+    "mongoose": "^6.9.0",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "28.1.4",
-    "@types/node": "^16.0.0",
+    "@types/jest": "29.2.4",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "18.11.18",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.1.2",
+    "jest": "29.3.1",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
-    "ts-jest": "28.0.5",
+    "ts-jest": "29.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
+    "tsconfig-paths": "4.1.1",
+    "typescript": "^4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
